# pdf2md

./: .gitignore  LICENSE  Phase 2 Additions Plan.md  README.md  SETUP_INSTRUCTIONS.md  pdf2md.py  pyproject.toml  requirements.txt  setup.py
